<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etEventName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="8dp"
            android:hint="@string/event_name" />

        <EditText
            android:id="@+id/etEventDescription"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="8dp"
            android:hint="@string/event_description" />

        <EditText
            android:id="@+id/etEventPrice"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="8dp"
            android:hint="@string/event_price"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etEventDate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="8dp"
            android:hint="@string/event_date" />

        <EditText
            android:id="@+id/etEventPass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="8dp"
            android:hint="@string/event_pass" />

        <EditText
            android:id="@+id/etEventDireccion"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="8dp"
            android:hint="@string/event_address" />

        <Button
            android:id="@+id/btnSaveEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_event" />
    </LinearLayout>
</ScrollView>